<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo_1_simple_dialog">Demo 1 - simple dialog</string>
    <string name="demo_2_buttons_dialog">Demo 2 - Buttons Dialog</string>
    <string name="enter">enter</string>
    <string name="enter_some_text">Enter Some Text</string>
    <string name="button_3_input_dialog">Button 3 - Input Dialog</string>
    <string name="textview">TextView</string>
    <string name="enter_number_1">Enter number 1:</string>
    <string name="enter_number_2">Enter number 2:</string>
    <string name="button_4">Button 4</string>
    <string name="enter_2_numbers">Enter 2 numbers</string>
</resources>